# Marketing-Automation-MCP-Server

./: .env.example  .gitignore  CONTRIBUTING.md  DEMO_README.md  Dockerfile  Dockerfile.dashboard  PROJECT_SUMMARY.md  README.md  config.yaml.example  demo.py  deploy.sh  docker-compose.yml  marketing-automation  pyproject.toml  quick_demo.py  requirements.txt  run_local.sh  run_server.py  simple_dashboard.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
dashboard/: app.py
dashboard/templates/: dashboard.html
docs/: README.md  quickstart.md
docs/api/: README.md
docs/examples/: README.md
docs/guides/: roi-methodology.md
scripts/: init-db.sql
src/: __init__.py  ai_engine.py  cli.py  config.py  database.py  database_utils.py  logger.py  models.py  performance.py  reporting.py  security.py  server.py
src/integrations/: __init__.py  base.py  facebook_ads.py  google_ads.py  google_analytics.py  unified_client.py
src/templates/: base.html  campaign_optimization.html  executive_dashboard.html  roi_analysis.html  weekly_summary.html
src/tools/: __init__.py  analytics.py  automation.py  campaigns.py  contacts.py  marketing_tools.py
tests/: __init__.py  conftest.py
tests/integration/: test_marketing_workflows.py
tests/unit/: test_ai_engine.py  test_api_integrations.py  test_mcp_tools.py
